# sourcefire

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-03-24-sourcefire-cli.md
docs/superpowers/specs/: 2026-03-24-sourcefire-cli-design.md
prompts/: system.md
sourcefire/: cli.py  config.py  db.py  global_config.py  init.py  watcher.py
sourcefire/api/: models.py  routes.py
sourcefire/chain/: prompts.py  rag_chain.py
sourcefire/indexer/: embeddings.py  language_profiles.py  metadata.py  pipeline.py
sourcefire/prompts/: system.md
sourcefire/retriever/: graph.py  search.py
sourcefire/static/: app.js  index.html  styles.css
src/: config.py
src/api/: models.py  routes.py
src/chain/: prompts.py  rag_chain.py
src/indexer/: embeddings.py  metadata.py  pipeline.py
src/retriever/: graph.py  search.py
static/: app.js  index.html  styles.css
tests/: test_config.py  test_graph.py  test_metadata.py  test_pipeline_collection_key.py  test_prompts.py  test_routes.py  test_search.py
